fixing modal header and aligning components properly

--- a/components/activity_and_insights/insights/insights_header/insights_header.scss
+++ b/components/activity_and_insights/insights/insights_header/insights_header.scss
@@ -38,20 +38,4 @@
             color: rgba(var(--center-channel-color-rgb), 0.56);
         }
     }
-
-    .react-select {
-        .react-select__control {
-            height: 32px;
-            min-height: 32px;
-        }
-
-        .react-select__value-container {
-            padding-left: 12px;
-        }
-
-        .react-select__indicators {
-            padding-right: 10px;
-            color: rgba(var(--center-channel-color-rgb), 0.64);
-        }
-    }
 }
